<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/slot_machine"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
         />

    <LinearLayout
        android:id="@+id/layoutResultNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/resultNum1"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@drawable/textview_border"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center"
            >

        </TextView>

        <TextView
            android:id="@+id/resultNum2"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/textview_border"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center"
            >

        </TextView>

        <TextView
            android:id="@+id/resultNum3"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@drawable/textview_border"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutResultNumbers"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/betNumber1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:autofillHints="betNumber"
            android:background="@drawable/textview_border"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="LabelFor"
            android:maxLength="1">

        </EditText>

        <EditText
            android:id="@+id/betNumber2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:autofillHints="betNumber"
            android:background="@drawable/textview_border"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="LabelFor"
            android:maxLength="1">

        </EditText>

        <EditText
            android:id="@+id/betNumber3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:autofillHints="betNumber"
            android:background="@drawable/textview_border"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="LabelFor"
            android:maxLength="1">

        </EditText>

        <EditText
            android:id="@+id/betAmount"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints="betAmount"
            android:background="@drawable/textview_border"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:hint="@string/enter_bet_amount"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="LabelFor">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/multiplierAndAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutBets"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        >

        <TextView
            android:id="@+id/multiplier"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/textview_border"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/startingMultiplier"
            >

        </TextView>

        <TextView
            android:id="@+id/CurrentMoneyAmount"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="200dp"
            android:text="@string/userAmount"
            android:textSize="20sp"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutResultAndSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/multiplierAndAmount"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        >

        <TextView
            android:id="@+id/textResult"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold">


        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setPlayButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:text="@string/set"
            android:textSize="25sp"
            android:textStyle="bold"
            android:backgroundTint="@color/babyBlue"
            >

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutReviewAndReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutResultAndSetButton"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reviewButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/babyBlue"
            android:text="@string/review"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            >

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="98dp"
            android:backgroundTint="@color/cherry"
            android:enabled="true"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textStyle="bold"
            >

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

    <ListView
        android:id="@+id/lvItems"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:layout_marginLeft="5dp"
        >


    </ListView>


</RelativeLayout>